# horizon1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  sdkconfig  sdkconfig.old
components/: lv_conf.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl_esp32_drivers/: lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c
main/: CMakeLists.txt  debug.c  debug.h  decode_image.c  display.c  display.h  horizon-display.c  horizon-display.h  lcd_gc9a01_roger.h  main.c  spi_master_example_main.c
